--- a/index.html
+++ b/index.html
@@ -124,13 +124,13 @@
                 <div class="column right">
                     <div class="bars">
                         <div class="info">
-                            <span><i class="fa-regular fa-circle-check"></i>&nbsp&nbsp Proficient in Excel,
-                                PowerPoint, HTML, CSS</span>
+                            <span><i class="fa-regular fa-circle-check"></i>&nbsp&nbsp Advanced in Excel,
+                                HTML, CSS</span>
                         </div>
                     </div>
                     <div class="bars">
                         <div class="info">
-                            <span><i class="fa-regular fa-circle-check"></i>&nbsp&nbsp Familiar with SAP, SQL, Power BI, and
+                            <span><i class="fa-regular fa-circle-check"></i>&nbsp&nbsp Familiar with SQL, Power BI, and
                                 Python</span>
                         </div>
                     </div>
